--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "datatables.net": "^2.3.4",
+    "datatables.net-dt": "^2.3.4",
+    "datatables.net-vue3": "^3.0.4",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
